# build-your-own-prompt-cache

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: benchmark.py
config/: prompt-cache.yml
deploy/: grafana-dashboard-provider.yml  grafana-dashboard.json  prometheus.yml
src/prompt_cache/: __init__.py  backends.py  cli.py  concurrency.py  config.py  core.py  eviction.py  factory.py  interfaces.py  key_builder.py  llm.py  metrics.py  semantic.py  serde.py  service.py  types.py  warm.py
tests/: test_backends.py  test_eviction.py  test_integration.py  test_key_builder.py  test_prompt_cache.py  test_property_based.py
